# rust-beer

./: README.md  docker-compose.yml
beer-kit/: .env  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
beer-kit/src/lib/: BeerTable.svelte  EditBeer.svelte  api.ts  types.ts
beer-kit/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
beer-kit/src/routes/edit/[id]/: +page.server.ts  +page.svelte  +page.ts
beer-service/: Cargo.toml  Dockerfile  README.md
beer-service/http-requests/: Beers.http  Hello.http
beer-service/src/: api.rs  main.rs  model.rs  repository.rs
