[package]
name = "beer-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = "1.0.159"
serde_json = "1.0.95"
dotenv = "0.15.0"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.17"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
actix-web-lab = "0.19.1"

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["async-std-runtime"]
